infra/k8s/gong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gong-http-server
  namespace: id-pain
spec:
  selector:
    app: gong-http-server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
